Fix [navbar z-index] LeftMenu

--- a/src/components/ui/LeftMenu/leftMenu.module.css
+++ b/src/components/ui/LeftMenu/leftMenu.module.css
@@ -39,10 +39,6 @@
   margin-bottom: var(--spacer-xl);
 }
 
-.wrapper * {
-  z-index: 100;
-}
-
 .pageWrapper {
   width: 100%;
   margin-top: var(--spacer-l);
